--- a/mod08-Projeto-Pizzas/instrucoes-08-pizzas.html
+++ b/mod08-Projeto-Pizzas/instrucoes-08-pizzas.html
@@ -68,12 +68,36 @@
     c('.pizzaBig img').src = pizzaJson[key].img;
     c('.pizzaInfo h1').innerHTML = pizzaJson[key].name;
     c('.pizzaInfo--desc').innerHTML = pizzaJson[key].description;
-    
+
 <hr>
 <strong>#6: Compra de Pizzas - parte 6</strong> 
 
+    preço 
+    tamanho
+    tamanho selected
+    quantidade
+
+
+    c('.pizzaInfo--actualPrice').innerHTML = `R$ ${pizzaJson[key].price.toFixed(2)}`;
+
+    c('.pizzaInfo--size.selected').classList.remove('selected');
+
+    cs('.pizzaInfo--size').forEach((size, sizeIndex)=>{
+        if(sizeIndex == 2){
+            size.classList.add('selected');
+        }
+        size.querySelector('span').innerHTML = pizzaJson[key].sizes[sizeIndex];
+    });
+
+    c('.pizzaInfo--qt').innerHTML = modalqt;
+
 <hr>
 <strong>#7: Compra de Pizzas - parte 7</strong> 
+
+    ... continuando
+
+    fechar modal 
+    aumentar / diminuir qtd
 
 <hr>
 <strong>#8: Compra de Pizzas - parte 8</strong> 
