--- a/mod08-Projeto-Pizzas/instrucoes-08-pizzas.html
+++ b/mod08-Projeto-Pizzas/instrucoes-08-pizzas.html
@@ -252,7 +252,54 @@
 <strong>#12: Compra de Pizzas - parte 12</strong> 
 
     ... fazer p clone do item do carrinho 
-    inserir no aside 
+    
+    clonar cart--item 
+    preencher as informacoes
+    exibir na tela 
+
+
+    function updateCart(){
+        if(cart.length > 0){
+            c('aside').classList.add('show');
+            c('.cart').innerHTML = '';
+
+
+            for(let i in cart){
+                let pizzaItem = pizzaJson.find((item)=>{
+                    return item.id == cart[i].id;
+                });
+
+                let cartItem = c('.models .cart--item').cloneNode(true);
+
+                let pizzaSizeName;
+                switch(cart[i].size){
+                    case 0:
+                        pizzaSizeName = 'P';
+                        break;
+
+                    case 1:
+                        pizzaSizeName = 'M';
+                        break;
+
+                    case 2:
+                        pizzaSizeName = 'G';
+                        break;
+                }
+                let pizzaName = `${pizzaItem.name} (${pizzaSizeName})`;
+
+                cartItem.querySelector('img').src = pizzaItem.img;
+                cartItem.querySelector('.cart--item-nome').innerHTML = pizzaName;
+                cartItem.querySelector('.cart--item--qt').innerHTML = cart[i].qt;
+
+                c('.cart').append(cartItem);
+            }
+
+
+        } else {
+            c('aside').classList.remove('show');
+        }
+    }
+
 
 <hr>
 <strong>#13: Compra de Pizzas - parte 13</strong> 
