--- a/mod08-Projeto-Pizzas/instrucoes-08-pizzas.html
+++ b/mod08-Projeto-Pizzas/instrucoes-08-pizzas.html
@@ -377,6 +377,27 @@
 
     ... última parte, vamos olhar como está no mobile
 
+
+    c('.menu-openner').addEventListener('click',()=>{
+        if(cart.length > 0){
+            c('aside').style.left = '0';
+        }
+    });
+
+    c('.menu-closer').addEventListener('click',()=>{
+        c('aside').style.left = '100vw';
+    });
+
+
+
+    updateCart()
+    
+        } else {
+            c('aside').classList.remove('show');
+            c('aside').style.left = '100vw';
+        }
+
+
 </pre>
 
 </body>
