passo 6: procurando candidato + voto nulo

--- a/mod10-urna-eletronica/instrucoes-10-urna.html
+++ b/mod10-urna-eletronica/instrucoes-10-urna.html
@@ -63,7 +63,7 @@
     
         let numeroHtml = ``;
     
-        for(let i=0; i<etapa.numeros; i++){
+        for(let i=0; i < etapa.numeros; i++){
             if(i === 0){
                 numeroHtml += '<div class="numero pisca"></div>';
             } else {
@@ -102,6 +102,43 @@
 <hr>
 <strong>#6: Procurando candidato + voto nulo</strong> 
 
+    function atualizaInterface(){
+
+        console.log('finalizou de digitar o voto: ', numero);
+
+        let etapa = etapas[etapaAtual];
+        let candidato = etapa.candidatos.filter((item)=>{
+            if(item.numero === numero){
+                return true;
+            } else {
+                return false;
+            }
+        });
+
+        console.log('candidato', candidato);
+
+        if(candidato.length > 0){
+            candidato = candidato[0];
+            seuVotoPara.style.display = 'block';
+            aviso.style.display = 'block';
+            descricao.innerHTML = `Nome: ${candidato.nome} <br>Partido: ${candidato.partido}`;
+            let fotosHtml = '';
+            for(let i in candidato.fotos){
+                fotosHtml += '<div class="d-1-image">';
+                fotosHtml += `  <img src="images/${candidato.fotos[i].url}" alt="">`;
+                fotosHtml += `  ${candidato.fotos[i].legenda}`;
+                fotosHtml += '</div>';
+
+            }
+            lateral.innerHTML = fotosHtml;
+        } else { // VOTO NULO
+            seuVotoPara.style.display = 'block';
+            aviso.style.display = 'block';
+            descricao.innerHTML = `<div class="aviso-grande">Voto Nulo</div>`;
+
+        }
+
+    }
 
 <hr>
 <strong>#7: Corrige, Branco, Confirma</strong> 
