--- a/mod10-urna-eletronica/urna.html
+++ b/mod10-urna-eletronica/urna.html
@@ -17,6 +17,7 @@
                         <span>seu voto para</span>
                     </div>
                     <div class="d-1-2">
+                        <!-- style="color: #ff0050 !important;" -->
                         <span>
                             <!-- vereador -->
                         </span>
