passo 8: tela fim, e, salvando o voto

--- a/mod10-urna-eletronica/instrucoes-10-urna.html
+++ b/mod10-urna-eletronica/instrucoes-10-urna.html
@@ -202,6 +202,42 @@
 <strong>#8: Tela Fim e Salvando Voto</strong> 
 
 
+    function confirma(){
+        console.log('clicou: confirma');
+        let etapa = etapas[etapaAtual];
+        let votoConfirmado = false;
+
+        if(votoBranco === true){
+            console.log('confirmando como BRANCO');
+            votoConfirmado = true;
+            votos.push({
+                etapa: etapas[etapaAtual].titulo,
+                voto: 'Branco'
+            });
+        } else if(numero.length === etapa.numeros) {
+            console.log('confirmando como:', numero);
+            votoConfirmado = true;
+            votos.push({
+                etapa: etapas[etapaAtual].titulo,
+                voto: numero
+            });
+        }
+
+        
+        if(votoConfirmado){
+            etapaAtual++;
+            console.log( etapas[etapaAtual] );
+
+            if(etapas[etapaAtual] !== undefined){
+                comecarEtapa();
+            } else {
+                console.log('FIM');
+                document.querySelector('.tela').innerHTML = '< div class="aviso-gigante pisca">FIM</div>';
+                console.log(votos);
+            }
+        }
+    }
+
 
 </pre>
 
