desafio 7 proj em 7 dias: bateria

--- a/mod13-Projeto01-Bateria/instrucoes-13-1-bateria.html
+++ b/mod13-Projeto01-Bateria/instrucoes-13-1-bateria.html
@@ -12,5 +12,7 @@
     <a target="_blank" href="https://alunos.b7web.com.br/curso/javascript/projeto-1-bateria">https://alunos.b7web.com.br/curso/javascript/projeto-1-bateria</a> 
     
     <p>#1: Projeto 1 - Bateria    </p>
+
+    00:00 04:00 apresentação do projeto
 </body>
 </html>
