Desafio 7 proj em 7 dias: 03 clima. início. pegamos o date atual, calculo de hora, minuto, segundo, uma função para rodar a cada segundo, pah

--- a/mod13-Projeto02-relogio/instrucoes-13-2-relogio.html
+++ b/mod13-Projeto02-relogio/instrucoes-13-2-relogio.html
@@ -18,10 +18,10 @@
     00:00 04:07 apresentando o projeto
 
 git add .
-git commit -m 'Desafio 7 proj em 7 dias: 02 relogio. Início'
+git commit -m 'Desafio 7 proj em 7 dias: 02 relogio. Finalizado. pegamos o date atual, calculo de hora, minuto, segundo, uma função para rodar a cada segundo, pah'
 git push
-git status
 clear
+git status
 
 </pre>
 
