Desafio 7 proj em 7 dias: 03 clima. Manipulacao de api, fez requisicao interna de api, pegar info de serviços externos e agregar o sistema.manipulacao json, objetos na tela, mostrar/não mostrar avisos, apagar a tela

--- a/mod13-Projeto03-clima/instrucoes-13-3-clima.html
+++ b/mod13-Projeto03-clima/instrucoes-13-3-clima.html
@@ -14,18 +14,25 @@
 
 <pre>
 
-    00:00 04:07 apresentando o projeto
+    00:00 08:07 apresentando o projeto
 
-### Projeto 3 - Clima
+    https://home.openweathermap.org/api_keys
 
-https://alunos.b7web.com.br/curso/javascript/d7js-projeto-3-clima
-    
 
 git add .
 git commit -m 'Desafio 7 proj em 7 dias: 03 clima. início. pegamos o date atual, calculo de hora, minuto, segundo, uma função para rodar a cada segundo, pah'
 git push
 clear
 git status
+
+
+git add .
+git commit -m 'Desafio 7 proj em 7 dias: 03 clima. Manipulacao de api, fez requisicao interna de api, pegar info de serviços externos e agregar o sistema.manipulacao json, objetos na tela, mostrar/não mostrar avisos, apagar a tela'
+git push
+clear
+git status
+
+
 
 </pre>
     
