Desafio 7 proj em 7 dias: 04 Jogo da velha. Finalizado

--- a/mod13-Projeto4-jogoDaVelha/instrucoes-13-4-jogoDaVelha.html
+++ b/mod13-Projeto4-jogoDaVelha/instrucoes-13-4-jogoDaVelha.html
@@ -19,9 +19,15 @@
     <pre>
 
         00:00 03:00 apresentando o projeto
+        03:00 06:07 mostrando a tela, elementos, botoes
+        06:07 03:00 um jogo sempre tem pelo menos 3 etapas diferentes
+
+            1) tem os dados iniciais
+            2) tem os eventos, clicks
+            3) as funcoes que vao auxilar os eventos: funcao resetar, verificar quem ganhou, funcoes para varias coisas diferentes
 
 git add .
-git commit -m 'Desafio 7 proj em 7 dias: 04 Jogo da velha. '
+git commit -m 'Desafio 7 proj em 7 dias: 04 Jogo da velha. Inicio, apresentação, arquivos base.'
 git push
 clear
 git status
