ajustando um detalhe de informação na página

--- a/mod13-Projeto4-jogoDaVelha/instrucoes-13-4-jogoDaVelha.html
+++ b/mod13-Projeto4-jogoDaVelha/instrucoes-13-4-jogoDaVelha.html
@@ -32,6 +32,12 @@ git push
 clear
 git status
 
+git add .
+git commit -m 'Desafio 7 proj em 7 dias: 04 Jogo da velha. Finalizado'
+git push
+clear
+git status
+                        
     </pre>
 
 
