--- a/mod13-Projeto05-quadroDeDesenho/quadroDeDesenho/index.html
+++ b/mod13-Projeto05-quadroDeDesenho/quadroDeDesenho/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desenhando no Canvas</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css?x=1" />
 </head>
 <body>
     <h1>Desenhando no Canvas</h1>
