mod 13, projeto 7, arrasta Solta, finalizado

--- a/mod13-Projeto07-arrastaSolta/instrucoes-13-7-arrastaSolta.html
+++ b/mod13-Projeto07-arrastaSolta/instrucoes-13-7-arrastaSolta.html
@@ -7,19 +7,22 @@
     <title>Projeto 7 - Arrasta e Solta</title>
 </head>
 <body>
+
+    <h3>Projeto 7 - Arrasta e Solta</h3>
+
+    <p>
+        <a href="https://alunos.b7web.com.br/curso/javascript/d7js-projeto-7-arrasta-e-solta" target="_blank">https://alunos.b7web.com.br/curso/javascript/d7js-projeto-7-arrasta-e-solta</a>
+    </p>
+
+    <pre>
     
-</body>
-</html>
-
-<h3>Projeto 7 - Arrasta e Solta</h3>
-
-<p>
-    <a href="https://alunos.b7web.com.br/curso/javascript/d7js-projeto-7-arrasta-e-solta" target="_blank">https://alunos.b7web.com.br/curso/javascript/d7js-projeto-7-arrasta-e-solta</a>
-</p>
-
-
 Base-do-projeto
 Projeto-completo
 
 mode13-Projeto07-arrastaSolta
+
+    </pre>
+    
+</body>
+</html>
 
