--- a/mod02-basico-novo/instrucoes-02-basico.html
+++ b/mod02-basico-novo/instrucoes-02-basico.html
@@ -155,6 +155,26 @@
 <hr>
 <strong>#10: Arrow Function</strong> 
 
+    function somar(x,y){
+        return x + y;
+    }
+
+    const somar(x, y) => {
+        return x + y;
+    }
+
+    const somar = (x, y) => x + y;
+    em 1 linha, aqui já é o return
+
+    const sobrenome = sobre => 'Boniek ' + sobre;
+    console.log(sobrenome('Lacerda'));
+
+    <script>
+        const sobrenome = sobre => 'Boniek ' + sobre;
+        console.log(sobrenome('Lacerda'));
+
+    </script>
+    
 <hr>
 <strong>#11: Variáveis dentro de funções</strong> 
 
