--- a/mod02-basico-novo/instrucoes-02-basico.html
+++ b/mod02-basico-novo/instrucoes-02-basico.html
@@ -244,6 +244,27 @@
 <hr>
 <strong>#13: Introdução a Array</strong> 
 
+    <script>
+        
+        let cor = 'blue';
+        let array_cores = ['red', 'green', 'blue', ['apple','microsoft']];
+
+        console.log(array_cores);
+        console.log(array_cores[0]);
+        console.log(array_cores[3]);
+        console.log(array_cores[3][0]);
+        console.log(array_cores[3][1]);
+
+    </script>
+    let cor = 'blue';
+    let array_cores = ['red', 'green', 'blue', ['apple','microsoft']];
+
+    console.log(array_cores);
+    console.log(array_cores[0]);
+    console.log(array_cores[3]);
+    console.log(array_cores[3][0]);
+    console.log(array_cores[3][1]);
+
 <hr>
 <strong>#14: Operações básicas de array</strong> 
 
