#14: Operações básicas de array

--- a/mod02-basico-novo/instrucoes-02-basico.html
+++ b/mod02-basico-novo/instrucoes-02-basico.html
@@ -268,6 +268,41 @@
 <hr>
 <strong>#14: Operações básicas de array</strong> 
 
+    <script>
+        let ingredientes = [
+            'cenoura',
+            'cebola',
+            'couve',
+            'brocólis'
+        ];
+
+        ingredientes.push('ovo');
+        console.log(ingredientes);
+        console.log('Total de ingredientes: '+ ingredientes.length);
+
+        ingredientes.pop();
+        console.log(ingredientes);
+
+        ingredientes.shift();
+        console.log(ingredientes);
+    </script>
+    let ingredientes = [
+        'cenoura',
+        'cebola',
+        'couve',
+        'brocólis'
+    ];
+
+    ingredientes.push('ovo');
+    console.log(ingredientes);
+    console.log('Total de ingredientes: '+ ingredientes.length);
+
+    ingredientes.pop();
+    console.log(ingredientes);
+
+    ingredientes.shift();
+    console.log(ingredientes);
+
 <hr>
 <strong>#15: Exercício de array #7</strong> 
 
