#15: Exercício de array #7

--- a/mod02-basico-novo/instrucoes-02-basico.html
+++ b/mod02-basico-novo/instrucoes-02-basico.html
@@ -306,6 +306,38 @@
 <hr>
 <strong>#15: Exercício de array #7</strong> 
 
+    <script>
+        // 1 pegar a ferrari
+        let carros = ['BMW', 'Ferrari', 'Mercedes'];
+        console.log('1. ',carros[1]);
+
+        // 2 troque a ferrari por um audi
+        carros[1] = 'Audi';
+        console.log(carros);
+
+        // 3 adicione um volvo a lista
+        carros.push('Volvo');
+        console.log(carros);
+
+        // 4 exiba quantos itens tem no array
+        console.log('carros: ',carros.length);
+
+    </script>
+    // 1 pegar a ferrari
+    let carros = ['BMW', 'Ferrari', 'Mercedes'];
+    console.log('1. ',carros[1]);
+
+    // 2 troque a ferrari por um audi
+    carros[1] = 'Audi';
+    console.log(carros);
+
+    // 3 adicione um volvo a lista
+    carros.push('Volvo');
+    console.log(carros);
+
+    // 4 exiba quantos itens tem no array
+    console.log('carros: ',carros.length);
+
 <hr>
 <strong>#16: O que são objetos?</strong> 
 
