#16: O que são objetos?

--- a/mod02-basico-novo/instrucoes-02-basico.html
+++ b/mod02-basico-novo/instrucoes-02-basico.html
@@ -341,6 +341,26 @@
 <hr>
 <strong>#16: O que são objetos?</strong> 
 
+    <script>
+        let obj_pessoa = {
+            nome: 'Travis Pastrana',
+            esportes: ['automobilismo', 'motociclismo', 'snowboard', 'bmx'],
+            nacionalidade: 'Norte Americano',
+            caracteristicas: {
+                altura: 1.80,
+                peso: 79,
+                idade: 31
+            }
+        }
+
+        console.log(obj_pessoa);
+        console.log(obj_pessoa.nome);
+        console.log(obj_pessoa.esportes);
+        console.log(obj_pessoa.caracteristicas.altura + 'm');
+        console.log(obj_pessoa.caracteristicas.peso + 'kg');
+
+    </script>
+
 <hr>
 <strong>#17: Acessando e alterando objetos</strong> 
 
