#18: Função dentro de objeto

--- a/mod02-basico-novo/instrucoes-02-basico.html
+++ b/mod02-basico-novo/instrucoes-02-basico.html
@@ -394,11 +394,52 @@
 <hr>
 <strong>#18: Função dentro de objeto</strong> 
 
+    <script>
+        let outra_pessoa = {
+            nome: 'Kelly',
+            sobrenome: 'Slater',
+            profissao: 'surfer',
+            nacionalidade: 'Norte americano',
+            nomeCompleto: function(){
+                return this.nome+' '+this.sobrenome;
+            }
+        }
+        console.log(outra_pessoa.nomeCompleto());
+    
+    </script>
+    let outra_pessoa = {
+        nome: 'Kelly',
+        sobrenome: 'Slater',
+        profissao: 'surfer',
+        nacionalidade: 'Norte americano',
+        nomeCompleto: function(){
+            return this.nome+' '+this.sobrenome;
+        }
+    }
+    console.log(outra_pessoa.nomeCompleto());
+
 <hr>
 <strong>#19: O loop for</strong> 
 
 <hr>
 <strong>#20: Dando loop em arrays</strong> 
+
+
+<hr>
+<strong>#21: O loop while</strong>
+
+<hr>
+<strong>#22: Exercício de loops #8</strong>
+
+<hr>
+<strong>#23: Funções de array</strong>
+
+<hr>
+<strong>#24: Ordenação de array</strong>
+
+<hr>
+<strong>#25: Iteração de array 1</strong>
+
 
 </pre>    
 </body>
