--- a/mod02-basico-novo/instrucoes-02-basico.html
+++ b/mod02-basico-novo/instrucoes-02-basico.html
@@ -421,6 +421,16 @@
 <hr>
 <strong>#19: O loop for</strong> 
 
+    <script>
+        for (let v_for = 0; v_for < 10; v_for++) {
+            console.log('v_for', v_for);
+        }
+    </script>
+
+    for (let v_for = 0; v_for < 10; v_for++) {
+        console.log('v_for', v_for);
+    }
+
 <hr>
 <strong>#20: Dando loop em arrays</strong> 
 
